--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,25 @@
 # Database configuration
-spring.datasource.url=jdbc:mariadb://localhost:3306/compagnie
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/compagnie
+spring.datasource.username=postgres
 spring.datasource.password=0628970725
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# Spring Data REST configuration
 spring.data.rest.base-path=/api
+
 # Swagger UI configuration
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 
+# Management and health endpoints configuration
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
