--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,22 @@ services:
     networks:
       - my-network
 
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - my-network
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - my-network
+
 volumes:
   db_data:
 
