--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,5 @@ springdoc.swagger-ui.operationsSorter=method
 # Management and health endpoints configuration
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.prometheus.metrics.export.enabled=true
+management.metrics.export.prometheus.endpoint.enabled=true
